variables.RunHalf.scala.error
Compilation error:
RunHalf:8: error: ';' expected but 'if' found.
  }if(estSurOrange()==true){
   ^